fixed overflow scroll

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html, body {
   width: 100%;
   height:100%;
   color: white;
-  overflow: scroll;
   min-width: 300px;
 } 
 
@@ -27,7 +26,6 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% auto;
-  overflow: scroll;
   margin-bottom: 45px;
 }
 
@@ -65,7 +63,7 @@ html, body {
 .bottomBar {
   width: 100%;
   min-width: 300px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 }
 
